[tool.poetry]
name = "no-lag"
version = "3.1.4"
description = "Destroys the lag in the minecraft world with over 6 different and adjustable methods. "
authors = ["2mal3 <56305732+2mal3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beet = "^0.88.0"
mecha = "^0.73.0"
bolt = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
